[project]
description = "A starter template for marimo notebooks with uv"
name = "marimo-template"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "ruff>=0.8.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "marimo_template"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
]
